rename options label

--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
         <div class="container p-3">
             <div class="form-check-reverse form-switch mb-2">
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchYOE">
-                <label class="form-check-label" for="switchYOE">YOE</label>
+                <label class="form-check-label" for="switchYOE">Years of Experience</label>
             </div>
             <div class="form-check-reverse form-switch mb-2">
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchEducation">
