--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
             <div class="row pb-3">
                 <div class="col">
                     <div class="button-row">
-                        <button type="button" id="about-button" class="btn btn-primary">About</button>
+                        <button type="button" id="about-button" class="btn btn-dark">GitHub</button>
                     </div>
                 </div>
             </div>
