update options display

--- a/options.html
+++ b/options.html
@@ -6,7 +6,8 @@
         <script src="scripts/options.js"></script>
     </head>
     <body>
-        <div class="container p-3">
+        <div class="container p-3 border-top">
+            <div class="mb-2">Select categories to search for:</div>
             <div class="form-check-reverse form-switch mb-2">
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchYOE">
                 <label class="form-check-label" for="switchYOE">Years of Experience</label>
