--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <link href="bootstrap-files/bootstrap.min.css" rel="stylesheet">
+        <link href="../compiled/bootstrap/bootstrap.min.css" rel="stylesheet">
         <link href="popup.css" rel="stylesheet">
-        <script src="bootstrap-files/bootstrap.bundle.min.js"></script>
-        <script src="scripts/popup.js"></script>
+        <script src="../compiled/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="popup.js"></script>
     </head>
     <body>
         <div class="container">
