--- a/src/options/options.html
+++ b/src/options/options.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <link href="bootstrap-files/bootstrap.min.css" rel="stylesheet">
+        <link href="../compiled/bootstrap/bootstrap.min.css" rel="stylesheet">
         <link href="options.css" rel="stylesheet">
-        <script src="bootstrap-files/bootstrap.bundle.min.js"></script>
-        <script src="scripts/options.js"></script>
+        <script src="../compiled/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="options.js"></script>
     </head>
     <body>
         <div class="container p-3 border-top">
