add certification category

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -16,6 +16,10 @@
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchEducation">
                 <label class="form-check-label" for="switchEducation">Education</label>
             </div>
+            <div class="form-check-reverse form-switch mb-2">
+                <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchCerts">
+                <label class="form-check-label" for="switchEducation">Certifications</label>
+            </div>
             <div class="form-check-reverse form-switch">
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchDLicense">
                 <label class="form-check-label" for="switchDLicense">Driver's License</label>
