add cover letter category

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -18,11 +18,15 @@
             </div>
             <div class="form-check-reverse form-switch mb-2">
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchCerts">
-                <label class="form-check-label" for="switchEducation">Certifications</label>
+                <label class="form-check-label" for="switchCerts">Certifications</label>
             </div>
-            <div class="form-check-reverse form-switch">
+            <div class="form-check-reverse form-switch mb-2">
                 <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchDLicense">
                 <label class="form-check-label" for="switchDLicense">Driver's License</label>
+            </div>
+            <div class="form-check-reverse form-switch">
+                <input class="form-check-input ml-2" type="checkbox" role="switch" id="switchCoverLetter">
+                <label class="form-check-label" for="switchCoverLetter">Cover Letter</label>
             </div>
         </div>
     </body>
